--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Solucionador Interativo do Problema da Mochila</title>
+  <title>Problema da Mochila | Sortphy</title>
+  <link rel="icon" href="./images/sortphy.png">
   <style>
     :root {
       --primary: #3498db;
@@ -319,10 +320,10 @@
   </style>
 </head>
 <body>
-  <header>
-    <h1>Solucionador Interativo do Problema da Mochila</h1>
-    <p>Feito por Sortphy - github.com/Sortphy</p>
-  </header>
+    <header>
+        <h1>Solucionador Interativo do Problema da Mochila</h1>
+        <p>Feito por Sortphy - <a href="https://github.com/Sortphy" target="_blank">github.com/Sortphy</a></p>
+      </header>      
   
   <div class="container">
     <div class="intro">
