items mostram mas algoritimo nao roda ainda ta quebnradp

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="./images/sortphy.png">
   <link rel="stylesheet" href="styles.css">
 
-  <script defer src="script.js" type="module"></script>
+  <script defer src="script.js"></script>
 
 </head>
 <body>
